--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,43 @@
 /* All styles for your header Components live here */
+
+.headContainer {
+  padding-bottom: 15px;
+}
+.thumbNail {
+  height: 50px;
+  margin-top: 5px;
+  margin-left: 5px;
+  position: absolute;
+}
+
+.headTitle {
+  width: 525px;
+  margin-left: 55px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.authorID {
+  margin: 0px 0px;
+  padding: 8px 0px 8px 3px;
+  width: 111px;
+  height: 15px;
+  font-size: 14px;
+}
+
+.accountDate {
+  margin: 0px 0px;
+  padding: 8px 0px;
+  width: 200px;
+  height: 15px;
+  font-size: 12px;
+  color: grey;
+}
+
+.summary {
+  margin: 0;
+  padding: 0px 3px;
+  line-height: 18px;
+  font-size: 14px;
+}
