--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -2,3 +2,43 @@
     display: flex;
     flex-direction: row;
 }
+
+.actionButtons {
+    width: 120px;
+    height: 472px;
+}
+.actionButton {
+    border: 1px solid gray;
+    background-color: #A0001E;
+    color: #fff;
+    text-align: center;
+    height: 92px;
+    font-size: 18px;
+    font-weight: lighter;
+}
+
+.numberButtons {
+    border: 1px solid gray;
+    margin-right: -10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 360px;
+    height: 469px;
+    text-align: center;
+    font-size: 22px;
+}
+.numberButton {
+    border: 1px solid gray;
+    width: 32.5%;
+    height: 92px;
+}
+
+.clearButton {
+    width: 100%;
+    height: 35px;
+}
+
+.zeroButton {
+    width: 100%;
+}
